tests/cases/fail/tuple_destructure_shape.p4
def main() -> None:
    value: ((int,float),int) = ((1, 2.5), 3)
    (a, b, c): ((int,float),int) = value
